update minimum stability

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,7 @@
             "name": "amet suramet",
             "email": "ametsuramet@gmail.com"
         }
-    ]
+    ],
+    "minimum-stability": "stable"
 }
+
