update minimum stability #3

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
             "email": "ametsuramet@gmail.com"
         }
     ],
-    "minimum-stability": "dev-master"
+    "minimum-stability": "dev"
 }
 
